cf-template_aleksandr-yamskov.yaml
Parameters:
  ImageId:
    Type: String
    Description: AWS location provider app
    Default: ami-075eb70588c18b490
  InstanceType:
    Type: String
    Default: t2.micro
  IamInstanceProfileArn:
    Type: String
    Default: arn:aws:iam::822619185993:instance-profile/FullAccessRole_S3_SQS_SNS
  SshClientIp:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x
Resources:
  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: aws2025q2-aleksandr-yamskov
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: aws2025q2-Network
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: 10.0.11.0/24
      #MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: aws2025q2-PublicSubnet-A
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: 10.0.12.0/24
      Tags:
        - Key: Name
          Value: aws2025q2-PrivateSubnet-A
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: 10.0.21.0/24
      #MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: aws2025q2-PublicSubnet-B
  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: 10.0.22.0/24
      Tags:
        - Key: Name
          Value: aws2025q2-PrivateSubnet-B
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: aws2025q2-InternetGateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: aws2025q2-PublicRouteTable
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: aws2025q2-SecGr1
      GroupDescription: Security Group for allowing access over HTTP/HTTPS from
        anywhere and allowing SSH connections from your IP address only
      VpcId: !Ref VPC
  SecurityGroupIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1 # "-1" allows all protocols
      FromPort: -1 # "-1" allows all ports
      ToPort: -1 # "-1" allows all ports
      SourceSecurityGroupId: !Ref SecurityGroup
      GroupId: !Ref SecurityGroup
  SecurityGroupIngressSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: !Ref SshClientIp
      GroupId: !Ref SecurityGroup
  SecurityGroupIngressHttp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
      GroupId: !Ref SecurityGroup
  SecurityGroupIngressHttps:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0
      GroupId: !Ref SecurityGroup
  SecurityGroupIngressApp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      CidrIp: 0.0.0.0/0
      GroupId: !Ref SecurityGroup
  DbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: aws2025q2-SecGrForDb
      GroupDescription: Security Group for allowing access from the members of the same group
      VpcId: !Ref VPC
  DbSecurityGroupIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1 # "-1" allows all protocols
      FromPort: -1 # "-1" allows all ports
      ToPort: -1 # "-1" allows all ports
      SourceSecurityGroupId: !Ref DbSecurityGroup
      GroupId: !Ref DbSecurityGroup
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: aws2025q2-LaunchTemplate
      LaunchTemplateData:
        InstanceType: !Ref InstanceType
        ImageId: !Ref ImageId
        SecurityGroupIds:
          - !Ref SecurityGroup
          - !Ref DbSecurityGroup
        KeyName: aws2025q2-ssh-keys
        IamInstanceProfile:
          Arn: !Ref IamInstanceProfileArn
        UserData:
          Fn::Base64: !Sub |
            #!/usr/bin/env bash
            cd app
            aws s3 cp s3://aws2025q2-simple-app/simple-app-0.0.2-SNAPSHOT.jar ./
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: aws2025q2-AutoScalingGroup
      VPCZoneIdentifier:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetB
      MinSize: '1'
      MaxSize: '5'
      DesiredCapacity: '1'
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      TargetGroupARNs:
        - !Ref ALBTargetGroup
      Tags:
        - Key: Name
          Value: aws2025q2-App
          PropagateAtLaunch: true
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: '1'
        MaxBatchSize: '1'
        PauseTime: PT15M
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: InternetGateway
    Properties:
      Subnets:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetB
      SecurityGroups:
        - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: aws2025q2-LoadBalancer
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: '8080'
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPC
      Port: 8080
      Protocol: HTTP
      HealthCheckPort: 8080
      HealthCheckProtocol: HTTP
      HealthCheckPath: /health-check
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 5
      Tags:
        - Key: Name
          Value: aws2025q2-TargetGroup
